# atropylib

./: .copier-answers.yml  .devenv.flake.nix  .pre-commit-config.yaml  404.html  devenv.nix  flake.nix  index.html  mkdocs.yml  pyproject.toml
.devenv/: nix-eval-cache.db-shm  nix-eval-cache.db-wal
.github/workflows/: auto-merge.yaml  devenv_test.yaml  publish.yaml
args/: index.html
args/examples/: index.html
args/references/: index.html
args/usage/: index.html
docs/args/: examples.md  index.md  references.md  usage.md
examples/: index.html
references/: index.html
search/: search_index.json
src/atro_core/args/: README.md  __init__.py  arg_casting.py  class_populating.py  decorators.py  helpers.py  input_args.py  source_loading.py
src/atro_core/logging/: README.md  __init__.py  level.py
src/atro_core/utils/: atro_dict.py
src/atropylib/pubsub/: nats_client.py
src/atropylib/telemetry/logs/: __init__.py
src/pycore/: __init__.py
tests/args/: classes_for_test.py  consistency_accross_methods_test.py  dataclass_test.py  decorator_function_test.py  generic_only_one_source_type_test.py  many_sources_at_once_test.py  parse_variety_of_types_test.py  pydantic_class_test.py  test_helpers.py
tests/args/data_test_files/: test.json  test.yaml
tests/args/data_test_files/generic/: test.env  test.ini  test.json  test.toml  test.yaml
usage/: index.html
