[project]
name = "pycore"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "atropos", email = "sv7n@pm.me" }
]
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-instrumentation-asyncio>=0.52b1",
    "opentelemetry-instrumentation-click>=0.52b1",
    "opentelemetry-instrumentation-fastapi>=0.52b1",
    "opentelemetry-instrumentation-logging>=0.52b1",
    "opentelemetry-instrumentation-requests>=0.52b1",
    "pydantic>=2.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedmypy>=2.10.0",
    "pytest>=8.3.5",
]
